--- a/site/index.html
+++ b/site/index.html
@@ -8,19 +8,14 @@
   </head>
   <body>
     <nav class="navbar navbar-inverse">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">CoderBunker Faces</a>
-        </div>
-        <!-- <form>
-          Date:
-          <input type="date" name="datePick">
-        </form>
-        <button id="Today" class="btn btn-primary navbar-btn">All</button> -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">CoderBunker Faces</a>
+      </div>
     </nav>
-    <div class="container">
-
+    <div class="container pic-box">
+      
     </div>
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
