--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CoderBunker Faces</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
@@ -12,7 +13,7 @@
         <a class="navbar-brand" href="#">CoderBunker Faces</a>
       </div>
     </nav>
-    <div class="container pic-box">
+    <div id="pic-box">
 
     </div>
     <script src="js/jquery-3.2.1.min.js"></script>
