this should fix formatting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="navbar-brand" href="#">CoderBunker Faces</a>
       </div>
     </nav>
-    <div id="pic-box" style="margin-left:1%;">
+    <div id="pic-box">
 
     </div>
     <script src="js/jquery-3.2.1.min.js"></script>
